<resources>
    <string name="app_name" translatable="false">Chekin Lite</string>
    <string name="lite">LITE</string>
    <string-array name="typeSuscription">
        <item>@string/mensual</item>
        <item>@string/anual</item>
    </string-array>
    <string-array name="countryList">
        <item>España</item>
        <item>Italia</item>
        <item>Portugal</item>
    </string-array>
    <string-array name="spanishPoliceType">
        <item>Policia Nacional</item>
        <item>Guardia Civil</item>
        <item>Mossos d.Esquadra</item>
        <item>Ertzaintza</item>
    </string-array>
    <string-array name="sexType">
        <item>@string/masculino</item>
        <item>@string/femenino</item>
    </string-array>
    <string-array name="spanishDocument">
        <item>DNI</item>
        <item>Documento de Identidad</item>
        <item>Pasaporte</item>
        <item>P. Conducir</item>
        <item>P. Residencia</item>
        <item>P. Residencia Extranjero</item>
    </string-array>
    <string-array name="italianDocument">
        <item>Carta Identita Elettronica</item>
        <item>Carta di Identita</item>
        <item>Passaporto Ordinario</item>
        <item>Patente di Guida</item>
        <item>Passaporto Diplomatico</item>
        <item>Certificato d.Identita</item>
    </string-array>
    <string-array name="portugalDocument">
        <item>Bilhete de Identidade</item>
        <item>Passport</item>
        <item>Foreign ID</item>
    </string-array>
    <string name="pagePrivacyPolicy"><![CDATA[ <p dir="ltr">Trataremos tus datos para darte de alta en la aplicación. Puedes ejercer tus derechos de acceso, rectificación, supresión, oposición, limitación del tratamiento y portabilidad escribiéndonos a <a href="mailto:soporte@chekin.io">soporte@chekin.io</a>.</p>
<p dir="ltr">&nbsp;</p>
<p dir="ltr"><strong>Responsable del tratamiento&nbsp;</strong></p>
<p dir="ltr"><span>El responsable del tratamiento de los datos recabados es Chekin Soluciones Digitales,S.L con NIF B21579990 (en adelante CheKin) y domicilio en Huelva, Calle San Jose, 1 2C, Corrales, 21120 titular de la App CheKin.&nbsp;</span></p>
<p dir="ltr"><span>La presente Pol&iacute;tica de Privacidad regula la recogida y tratamiento de los datos personales que sean proporcionados por los titulares de los alojamientos cuando accedan y hagan uso de las funcionalidades de la App CheKin.</span></p>
<p dir="ltr"><strong>Recogida de datos, finalidades, base de legitimaci&oacute;n y plazos de conservaci&oacute;n:&nbsp;</strong></p>
<ol>
<li dir="ltr">
<p dir="ltr"><span>Alta en la App y registro del titular del alojamiento: Mediante el registro en la App, ser&aacute; necesario que el usuario titular del alojamiento proporcione sus datos identificativos, como email, nombre, correo electr&oacute;nico y contrase&ntilde;a. Los datos ser&aacute;n tratados para darle de alta en la aplicaci&oacute;n y permitirle el acceso a los servicios que ofrece. La base jur&iacute;dica del tratamiento de tales datos se sustenta en el cumplimiento del contrato o licencia de uso. El plazo de conservaci&oacute;n de los datos para esta finalidad se le mantendr&aacute; durante el tiempo que el titular permanezca dado de alta y no hubiera ejercitado la baja de la aplicaci&oacute;n.&nbsp;</span></p>
</li>
</ol><ol start="2">
<li dir="ltr">
<p dir="ltr"><span>Suscripci&oacute;n: El titular del alojamiento puede suscribirse a los servicios que ofrece la App. Para ello, deber&aacute; facilitar los datos de su tarjeta de cr&eacute;dito. Los datos ser&aacute;n tratados para tramitar la gesti&oacute;n del pago de los servicios. La base jur&iacute;dica del tratamiento de tales datos se sustenta en el cumplimiento del contrato o licencia de uso. Los datos ser&aacute;n conservados durante el plazo requerido para cumplir con obligaciones legales o para poder atender reclamaciones o responsabilidades derivadas del tratamiento.&nbsp;</span></p>
</li>
</ol><ol start="3">
<li dir="ltr">
<p dir="ltr"><span>Cookies: La App dispone de tecnolog&iacute;a para la implantaci&oacute;n de archivos denominados cookies en el equipo que sea utilizado para el acceso y navegaci&oacute;n por la App. Las cookies pueden ser bloqueadas o deshabilitadas en cualquier momento a trav&eacute;s de las opciones de configuraci&oacute;n del navegador. Si desea m&aacute;s informaci&oacute;n puede consultar nuestra </span><a href="https://chekin.io/privacidad/"><span>pol&iacute;tica de Cookies</span></a><span>.&nbsp; La base jur&iacute;dica del tratamiento de tales datos se sustenta en el consentimiento del Usuario.</span></p>
</li>
</ol><ol start="4">
<li dir="ltr">
<p dir="ltr"><span>Publicidad: CheKin podr&aacute; tratar los datos de los usuarios titulares de los alojamientos para mantenerles actualizados de su actividad y novedades respecto de informaci&oacute;n relacionada con sus servicios en base a su inter&eacute;s leg&iacute;timo por medios electr&oacute;nicos. El titular puede oponerse a esto en el momento de su alta en la App o ejercitar su derecho de oposici&oacute;n. El plazo de conservaci&oacute;n de los datos ser&aacute; el tiempo que permanezca dado de alta en nuestros sistema para el env&iacute;o de publicidad y no haya revocado su consentimiento.&nbsp;</span></p>
</li>
</ol>
<p dir="ltr"><strong>Ejercicio de derechos&nbsp;</strong></p>
<p dir="ltr"><span>Asimismo, el Usuario puede revocar el consentimiento para el tratamiento, haciendo ejercicio de los derechos de acceso, rectificaci&oacute;n, supresi&oacute;n, portabilidad, oposici&oacute;n y limitaci&oacute;n al tratamiento, poni&eacute;ndolo en conocimiento de CheKin a trav&eacute;s de un correo electr&oacute;nico dirigido a </span><a href="mailto:soporte@chekin.io"><span>soporte@chekin.io</span></a><span> o indic&aacute;ndolo a la dirección arriba indicada, se&ntilde;alando como asunto &ldquo;Protecci&oacute;n de Datos&rdquo;. En alguna ocasi&oacute;n especial y seg&uacute;n las circunstancias, podremos solicitar al Usuario que acredite su identidad mediante documento oficial, por ejemplo para para evitar el acceso a sus datos por parte de terceros cuando pueda haber sospecha de fraude.&nbsp;</span></p>
<p dir="ltr"><span>Por &uacute;ltimo, el Usuario podr&aacute; comunicar cualquier modificaci&oacute;n por escrito o solicitar la baja, indic&aacute;ndolo en cualquiera de las direcciones facilitadas. En cualquier momento, el Usuario podr&aacute; presentar una reclamaci&oacute;n ante la Agencia Espa&ntilde;ola de Protecci&oacute;n de Datos para hacer valer sus derechos.&nbsp;</span></p>
<p dir="ltr"><strong>Modificaci&oacute;n de la Pol&iacute;tica de privacidad&nbsp;</strong></p>
<p dir="ltr"><span>CheKin se reserva el derecho de modificar en cualquier momento su pol&iacute;tica de privacidad, respetando la legislaci&oacute;n vigente en materia de protecci&oacute;n de datos y previa la debida comunicaci&oacute;n a los interesados.&nbsp;</span></p>
<p dir="ltr"><strong>Idioma aplicable a la presente pol&iacute;tica de privacidad&nbsp;</strong></p>
<p dir="ltr"><span>El idioma aplicable a esta Pol&iacute;tica de Privacidad es el espa&ntilde;ol. Cualquier versi&oacute;n de la misma en idioma distinto es ofrecida para comodidad del Usuario y para facilitar su comprensi&oacute;n. No obstante, esta Pol&iacute;tica de Privacidad se regir&aacute; siempre por su versi&oacute;n en espa&ntilde;ol. En caso de contradicci&oacute;n entre la Pol&iacute;tica de Privacidad en cualquier idioma y su versi&oacute;n en espa&ntilde;ol, prevalecer&aacute; la versi&oacute;n en espa&ntilde;ol.</span></p> ]]></string>
    <string name="email">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="olvidaste_la_contrase_a">¿Olvidaste la contraseña?</string>
    <string name="o">O</string>
    <string name="entra_con_tu_pms">ENTRA CON TU PMS</string>
    <string name="cancelar">Cancelar</string>
    <string name="todas_las_reservas">Todas las reservas</string>
    <string name="erroneas">Ha fallado</string>
    <string name="completadas">Completada</string>
    <string name="pendientes">En progreso</string>
    <string name="Nuevo">Nueva</string>
    <string name="reservas">Reservas</string>
    <string name="nuevo_chekin">Nueva Reserva</string>
    <string name="ajustes">Ajustes</string>
    <string name="a_adir_firma">AÑADIR FIRMA</string>
    <string name="a_ade_tu_firma">AÑADE TU FIRMA</string>
    <string name="me">Yo</string>
    <string name="seleccionar_responsable">Seleccionar Responsable</string>
    <string name="seleccionarcolaborador">SELECCIONAR COLABORADOR</string>
</resources>