<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="250dp"
        android:layout_height="230dp"
        android:background="@color/white">

    <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/filterNew"
            app:layout_constraintEnd_toStartOf="@+id/filterNew"
            app:layout_constraintTop_toTopOf="@+id/filterNew"
            app:srcCompat="@drawable/path_19041" />

    <TextView
            android:id="@+id/filterNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/robotomedium"
            android:text="@string/Nuevo"
            android:textAllCaps="false"
            android:textColor="@color/darkBlue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filterAllBookings" />

    <TextView
            android:id="@+id/filterAllBookings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/robotomedium"
            android:text="@string/todas_las_reservas"
            android:textAllCaps="false"
            android:textColor="@color/darkBlue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/filterError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/robotomedium"
            android:text="@string/erroneas"
            android:textAllCaps="false"
            android:textColor="@color/darkBlue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filterCompleted" />

    <TextView
            android:id="@+id/filterCompleted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/robotomedium"
            android:text="@string/completadas"
            android:textAllCaps="false"
            android:textColor="@color/darkBlue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filterPending" />

    <TextView
            android:id="@+id/filterPending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/robotomedium"
            android:text="@string/pendientes"
            android:textAllCaps="false"
            android:textColor="@color/darkBlue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filterNew" />

    <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/filterPending"
            app:layout_constraintEnd_toStartOf="@+id/filterPending"
            app:layout_constraintTop_toTopOf="@+id/filterPending"
            app:srcCompat="@drawable/yellowcircle" />

    <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/filterError"
            app:layout_constraintEnd_toStartOf="@+id/filterError"
            app:layout_constraintTop_toTopOf="@+id/filterError"
            app:srcCompat="@drawable/redcircle" />

    <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/filterCompleted"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/filterCompleted"
            app:srcCompat="@drawable/greencircle" />
</android.support.constraint.ConstraintLayout>