<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:fillViewport="false"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".CurrentVersion.Activities.MainActivity" android:background="@color/white">

    <RelativeLayout
            android:layout_width="0dp"
            android:id="@+id/userLoginView"
            android:layout_height="65dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:animateLayoutChanges="true"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/whiteBlue" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent">
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" app:errorEnabled="false" app:boxStrokeColor="@color/darkBlue"
                app:boxStrokeWidth="1sp">

            <EditText
                    android:id="@+id/userLoginEditext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/robotoregular"
                    android:inputType="textEmailAddress"
                    android:padding="15dp"
                    android:paddingTop="5dp"
                    android:selectAllOnFocus="false"
                    android:singleLine="false"
                    android:textAlignment="viewStart"
                    android:textColor="@color/darkBlue"

                    android:textColorHint="@color/darkBlue"
                    android:textColorLink="#3F51B5"
                    android:textColorHighlight="@color/softBlueWithAlpha"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="18dp" />

        </android.support.design.widget.TextInputLayout>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:paddingTop="3dp"
                android:text="@string/email" android:fontFamily="@font/robotoregular"
                android:textColor="@color/softBlue" android:layout_marginStart="15dp" android:textSize="14dp"/>
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="0dp"
            android:id="@+id/passLoginView"
            android:layout_height="65dp"
            android:animateLayoutChanges="true"
            android:background="@color/whiteBlue"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/userLoginView"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp">
        <android.support.design.widget.TextInputLayout
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/darkBlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" app:errorEnabled="false" app:boxStrokeColor="@color/darkBlue"
                app:boxStrokeWidth="1sp">
            <EditText
                    android:id="@+id/passLoginEditext"
                    android:layout_width="match_parent"
                    android:background="@android:color/transparent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:inputType="textPassword"
                    android:paddingTop="5dp"
                    android:textColorHighlight="@color/softBlueWithAlpha"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:fontFamily="@font/robotoregular" android:textSize="18dp"
                    android:textColor="@color/darkBlue" android:singleLine="false" android:selectAllOnFocus="false"
                    android:textAlignment="viewStart"/>

        </android.support.design.widget.TextInputLayout>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:paddingTop="3dp"
                android:text="@string/contrase_a" android:fontFamily="@font/robotoregular"
                android:textColor="@color/softBlue" android:layout_marginStart="15dp" android:textSize="14dp"/>
    </RelativeLayout>
    <Button
            android:text="@string/entrar"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/buttonLogin"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:background="@drawable/rounded_button" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/passLoginView" android:fontFamily="@font/robotomedium"
            android:textSize="16dp"/>
    <Button
            android:text="@string/olvidaste_la_contrase_a"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/buttonForgotPass" android:background="@android:color/transparent"
            android:textColor="@color/softBlue" android:fontFamily="@font/robotomedium" android:layout_marginEnd="32dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
            android:layout_marginStart="32dp" android:textSize="14dp"/>
    <TextView
            android:text="@string/o"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" android:id="@+id/textView2"
            android:textColor="@color/darkBlue" android:fontFamily="@font/robotomedium" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonForgotPass" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonPMS" android:textSize="14dp"/>
    <Button
            android:text="@string/entra_con_tu_pms"
            android:layout_width="0dp"
            android:layout_height="56dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/buttonPMS" android:background="@drawable/blueborder_button"
            android:textColor="@color/softBlue"
            android:fontFamily="@font/robotomedium" app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginTop="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:textSize="16dp"/>


</android.support.constraint.ConstraintLayout>