<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OldVersionFiles.CollaboratorsActivity" android:background="@color/white">

    <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/grayLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" android:id="@+id/view3"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@+id/selectListColTextView" android:layout_marginTop="8dp"/>
    <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="56dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintDimensionRatio="w,1:1" android:id="@+id/appBarLayout">
        <android.support.v7.widget.Toolbar android:layout_width="match_parent" android:layout_height="wrap_content"
                                           android:background="@color/white"
                                           android:id="@+id/toolbar"
                                           android:minHeight="56dp" app:layout_constraintEnd_toEndOf="parent"
                                           app:layout_constraintStart_toStartOf="parent"
                                           app:layout_constraintTop_toTopOf="parent">
            <Button
                    android:text=""
                    android:layout_width="24dp"
                    android:layout_gravity="left|center_vertical"
                    android:layout_height="24dp" android:id="@+id/buttonBackCol"
                    android:background="@drawable/back_arrow"/>

            <TextView
                    android:text="@string/seleccionar_responsable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/titleBarColaborators"
                    android:layout_marginLeft="40dp"
                    android:layout_gravity="center_vertical" android:fontFamily="@font/robotomedium"
                    tools:layout_editor_absoluteY="21dp" android:textSize="18dp" android:textColor="#00429A"
            />


        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout android:layout_width="0dp"
                                                 android:layout_height="70dp" android:layout_marginTop="16dp"
                                                 app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
                                                 android:id="@+id/mySelfView"
                                                 app:layout_constraintEnd_toEndOf="parent"
                                                 app:layout_constraintStart_toStartOf="parent"
                                                 android:background="#F6FBFF">
        <Button
                android:text="@string/me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonMySelf" android:textSize="19dp"
                android:textAllCaps="false" android:textColor="@color/darkBlue"
                android:background="@android:color/transparent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>

    </android.support.constraint.ConstraintLayout>
    <TextView
            android:text="@string/o"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/orTextView" android:textColor="@color/darkBlue" android:textSize="14dp"
            app:layout_constraintTop_toBottomOf="@+id/mySelfView" android:layout_marginTop="32dp"/>
    <TextView
            android:text="@string/seleccionarcolaborador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:id="@+id/selectListColTextView" android:textColor="@color/gray"
            app:layout_constraintTop_toBottomOf="@+id/orTextView" android:layout_marginTop="32dp"
            android:textSize="14dp"/>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/collaboratorTableView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view3"></android.support.v7.widget.RecyclerView>

</android.support.constraint.ConstraintLayout>